# Key_Flow

./: .eslintrc.json  .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  check.js  check_durations.js  check_errors.js  check_out.txt  hutao_pattern.json  index.html  package-lock.json  package.json  read_db.js  tailwind.config.js  tmp_bench.js  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  update.json  vite.config.ts  vitest_output.txt
.github/workflows/: ci.yml  release.yml
scripts/: verify-release-metadata.mjs  write-update-manifest.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/renderer/: App.tsx  main.tsx
src/renderer/components/comparison/: AnalysisPanel.tsx  (+2 more)
src/renderer/hooks/: useComparison.ts  useGantt.ts  useInputEvents.ts  useStoreBridge.ts
src/renderer/i18n/: index.ts
src/renderer/lib/: appBackup.ts  benchmark.test.ts  defaults.ts  drill.test.ts  drill.ts  errorAnalysis.ts  ganttFocus.test.ts  ganttFocus.ts  keyboardLayouts.ts  patternImport.test.ts  patternImport.ts  patternUtils.ts  runtime.ts  scoring.test.ts  scoring.ts  settings.test.ts  settings.ts  test_user_case.test.ts
src/renderer/pages/: HistoryPage.tsx  LibraryPage.tsx  PopoutPage.tsx  PracticePage.tsx  SettingsPage.tsx
src/renderer/services/: db.ts
src/renderer/stores/: comparisonStore.ts  displayStore.ts  inputStore.ts  patternStore.ts  sessionStore.ts  settingsStore.ts  viewportStore.ts
src/renderer/styles/: globals.css
src/renderer/types/: index.ts
(+14 files in other folders)
