[package]
name = "keyflow"
version = "1.0.1"
description = "Desktop app to help gamers practice combos"
authors = ["KeyFlow contributors"]
license = "MIT"
repository = "https://github.com/LinhTN11/Key_Flow"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
lazy_static = "1.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
rdev = "0.5.3"
